...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yollowish"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login"
        android:layout_width="158dp"
        android:layout_height="62dp"
        android:layout_marginBottom="66dp"
        android:background="@color/yollowishButtonColor"
        android:onClick="onClick"
        android:text="@string/Login"
...
