<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yollowish"
    android:orientation="vertical"
    tools:context="presentation.ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:padding="20dp"
        android:background="@color/yollowishButtonColor"
        >

        <TextView
            android:id="@+id/fullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo"
            android:text="@string/myProfile"
            android:textColor="@color/cardview_dark_background"
            android:textSize="35sp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>


    </RelativeLayout>

    <LinearLayout

        android:layout_width="250dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="-85dp"
        android:padding="10dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="125dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/profileUI_Layer1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/cardsCountImage"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/profilepagecardlogoDescription"
                    android:src="@drawable/ic_baseline_article_24" />

                <TextView
                    android:id="@+id/cardsCountInt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cardsCountImage"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/aclonica"
                    android:text="@string/cardCount"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cardsCountInt"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/aclonica"
                    android:text="@string/cards"
                    android:textSize="20sp"/>
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="-20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/profileUserNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/Username"

                android:drawableStart="@drawable/ic_baseline_email_24"

                android:drawablePadding="10dp" />


        <!--        Password Text Box-->
        <EditText
            android:id="@+id/profilePasswordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/password"
                android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                />

        <Button
            android:id="@+id/profileUpdateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/yollowishButtonColor"
            android:fontFamily="@font/baloo"
            android:onClick="updateUser"
            android:text="update"
            android:textColor="@color/grayish"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_front" />
        <!--        update button-->

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dashboardbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yollowishButtonColor"
        android:fontFamily="@font/baloo"
        android:onClick="openOptionsActivity"
        android:text="@string/gotoDashboard"
        android:textColor="@color/white" />
</LinearLayout>
