...
            android:layout_margin="10dp"
            android:layout_weight="1"
            >


            <RelativeLayout
                android:id="@+id/profileActivity"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
...
